--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .principal {
-    background-image: url(".assets/images/Background.png");
+    background-image: url("assets/images/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
